some changes added

--- a/Assignment3/NLP in Python 2.ipynb
+++ b/Assignment3/NLP in Python 2.ipynb
@@ -1460,10 +1460,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             ability  able  access  access advanced  acquisition  active  \\\n",
+      "chatgpt            2     2       3                1            0       0   \n",
+      "ecnyplan           0     0       0                0            0       1   \n",
+      "metaverse          1     0       2                0            0       0   \n",
+      "nvidia             1     0       0                0            0       0   \n",
+      "openai-sora        1     1       7                1            0       0   \n",
+      "techwar            0     1       4                3            1       0   \n",
+      "tencent            0     1       0                0            3       2   \n",
+      "\n",
+      "             active users  activity  administration  adopted  ...  worlds  \\\n",
+      "chatgpt                 0         0               0        0  ...       0   \n",
+      "ecnyplan                1         0               0        2  ...       2   \n",
+      "metaverse               0         1               0        2  ...       0   \n",
+      "nvidia                  0         0               0        0  ...       1   \n",
+      "openai-sora             0         1               3        0  ...       2   \n",
+      "techwar                 0         1               2        0  ...       1   \n",
+      "tencent                 2         0               2        0  ...       4   \n",
+      "\n",
+      "             worth  wrote  xie  xu  yanhong  year according  york  yuan  \\\n",
+      "chatgpt          0      2    0   0        2               0     0     0   \n",
+      "ecnyplan         2      1    0   0        0               0     0    23   \n",
+      "metaverse        0      0    0   0        0               2     0     0   \n",
+      "nvidia           0      1    0   0        0               0     0     0   \n",
+      "openai-sora      0      1    2   2        1               0     2     0   \n",
+      "techwar          1      0    0   0        0               0     0     1   \n",
+      "tencent          0      0    1   1        0               1     1     2   \n",
+      "\n",
+      "             yuan billion  \n",
+      "chatgpt                 0  \n",
+      "ecnyplan                1  \n",
+      "metaverse               0  \n",
+      "nvidia                  0  \n",
+      "openai-sora             0  \n",
+      "techwar                 1  \n",
+      "tencent                 1  \n",
+      "\n",
+      "[7 rows x 500 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cv = CountVectorizer(\n",
+    "    stop_words='english',  # Remove common English stop words\n",
+    "    max_df=0.8,\n",
+    "    min_df=0.2,\n",
+    "    max_features=500,  # Keep all features, you can set it to a specific number if needed\n",
+    "    ngram_range=(1, 2)  # Include unigrams only , had it had been (1,2) it would have included bigrams as well\n",
+    ")\n",
+    "\n",
+    "data_cv = cv.fit_transform(data_clean.transcript)\n",
+    "data_dtm = pd.DataFrame(data_cv.toarray(), columns=cv.get_feature_names_out())\n",
+    "data_dtm.index = data_clean.index\n",
+    "print(data_dtm)"
+   ]
   },
   {
    "cell_type": "code",
